k8s-resources/onlymodders/home/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: only-modders-home
  namespace: only-modders
spec:
  selector:
    app: only-modders-home
  ports:
  - name: http
    targetPort: 3000
    port: 80
