k8s-resources/onlymodders/home/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: only-modders-home
  namespace: only-modders
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.onlymodders.com`)
      kind: Rule
      services:
        - name: only-modders-home
          port: 80
          namespace: only-modders
    - match: Host(`onlymodders.com`)
      kind: Rule
      services:
        - name: only-modders-home
          port: 80
          namespace: only-modders
  tls:
    secretName: only-modders-tls
